# afni

./: .codespell-ignore-shorts.sh  .codespell-ignores  .codespellrc  .deprecation.txt  .dockerignore  .gitignore  .gitmodules  .mailmap  .travis.yml  CITATION.cff  CMakeCPack.cmake  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE.txt  README  README.rst  backup  conda_build_dockerfile
src/: .gitignore  1dApar2mat.c  1dAstrip.c  1dBandpass.c  1dBport.c  1dCorrelate.c  1dFlagMotion.c  1dGC.R  1dGentimes.c  1dMarry.c  1dNLfit.c  1dREMLfit.c  1dRplot  1dSEM.c  1dTsort.c  1dUpsample.c  1dcat.c  1dcorr.c  1ddot.c  1deval.c  1dfft.c  1dftime.c  1dgenARMA11.c  1dgrayplot.c  1dmatcalc.c  1dnorm.c  1dplot.c  1dsigplot.c  1dsound.c  1dsum.c  1dsvd.c  1dtranspose.c  24swap.c  2dImReg.c  2dcat.c  2perm.c  2swap.c  2tocx.c  3T_toafni.c  3dABoverlap.c  (+1568 more)
src/3DEdge/: CMakeLists.txt  COPYRIGHT  README.edges3D  README_COMPILE_ZSS  pgm.5
src/Audio/: @sound_to_header.csh  CMakeLists.txt  cs_sounds.h  smb3_coin.h  smb3_fireball.h
src/R_scripts/: 1dGC.R  1dRplot.R  1dSEMr.R  1dSVAR.R  3dAOV.R  3dChiSquared.R  3dGC.R  3dGLMM.R  3dICA.R  3dICC.R  3dICC_REML.R  3dISC.R  3dKS.R  3dLME.R  3dLME2.R  3dLMEr.R  3dMEMA.R  3dMEMA.z.R  3dMEPFM.R  3dMSS.R  3dMVM.R  3dPFM.R  3dRprogDemo.R  3dSignatures.R  AFNIio.R  AFNIplot.R  BayesianGroupAna.R  CMakeLists.txt  ExamineXmat.R  Level2.R  MBA.R  PTA.R  RBA.R  Signatures.R  TRR.R  afni_run_R  dataTable_lib.R  io.R  lib_dataTable.R  rPkgsInstall.R  (+1 more)
src/SUMA/: @DriveSumaAlphaDemo  @DriveSumaClippingPlanes  @DriveSumaExpandingBottomDemo  @MakeLocalMake  @SUMA_CreateCompileStamp  @TestAlpha  @new_dist  @new_dist.ref  @sumaTestCases  CMakeLists.txt  FIXED.h  SUMA.c  SUMA_3dBRAIN_VOYAGERtoAFNI.c  SUMA_3dCRUISEtoAFNI.c  SUMA_3dGenFeatureDist.c  SUMA_3dGenPriors.c  SUMA_3dHist.c  SUMA_3dSeg.c  SUMA_3dSkullStrip.c  SUMA_3dSurf2Vol.c  SUMA_3dSurf2Vol.h  SUMA_3dSurfMask.c  SUMA_3dSurfMaskDump.c  SUMA_3dSurfMaskDump.h  SUMA_3dVol2Surf.c  SUMA_3dVol2Surf.h  SUMA_3dinfill.c  SUMA_Algorithms.c  SUMA_Algorithms.h  SUMA_AnalyzeTrace.c  SUMA_BrainSkin.c  SUMA_BrainWrap.c  SUMA_BrainWrap.h  SUMA_Color.c  SUMA_Color.h  SUMA_ConvertDset.c  SUMA_ConvertSurface.c  SUMA_ConvexHull.c  SUMA_CoordMatch.c  SUMA_CoordMatch.h  (+150 more)
src/XmHTML/: CMakeLists.txt  Makefile
src/avovk/: 3dAclustering.c  3dAclustering_floatNM.c  3dTclust.c  3dfit_onesign.c  3dkmeans.c  @MakeLocalMake  @prepare4clust  @prepareAFTERclust  @seg_Wrsmpl6  @sigseg  Aclustering.c  Aclustering_NOMASK.c  Aclustering_floatNOMASK.c  CMakeLists.txt  Makefile.avovk.INCLUDE  cluster.c  cluster.h  cluster_doubleNOMASK.c  cluster_doubleNOMASK.h  cluster_floatNOMASK.c  cluster_floatNOMASK.h  fit_onesign.c  thd_segtools.c  thd_segtools.h  thd_segtools_fNM.c  thd_segtools_fNM.h
src/ccaballero/: 3dPFM.R  README.txt
src/cdflib/: Makefile  cdf_01.c  cdf_03.c  cdf_06.c  cdf_07.c  cdf_09.c  cdf_10.c  cdf_11.c  cdf_12.c  cdf_13.c  cdf_14.c  cdf_15.c  cdf_16.c  cdf_19.c  cdf_20.c  cdf_21.c  cdf_22.c  cdf_25.c  cdf_26.c  cdf_27.c  cdf_28.c  cdf_29.c  cdf_30.c  cdf_31.c  cdf_33.c  cdf_34.c  cdf_39.c  cdf_40.c  cdf_44.c  cdf_45.c  cdf_49.c  cdf_54.c  cdf_56.c  cdf_60.c  cdf_62.c  cdf_67.c  cdf_68.c  cdf_73.c  cdf_74.c  cdf_75.c  (+3 more)
src/converted_from_fortran/: CMakeLists.txt  F77_aloc.c  README  abort_.c  backspace.c  c_abs.c  c_cos.c  c_div.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  close.c  d_abs.c  d_acos.c  d_asin.c  d_atan.c  d_atn2.c  d_cnjg.c  d_cos.c  d_cosh.c  d_dim.c  d_exp.c  d_imag.c  d_int.c  d_lg10.c  d_log.c  d_mod.c  d_nint.c  d_prod.c  d_sign.c  d_sin.c  d_sinh.c  d_sqrt.c  d_tan.c  d_tanh.c  derf_.c  derfc_.c  dfe.c  dolio.c  (+114 more)
src/coxplot/: CMakeLists.txt  Makefile  Makefile.f2c  README  color.c  color.f  cox3d.h  coxplot.h  curve.c  filplt.f  find_color_name.c  frame.c  frstpt.c  labmod.c  labmod.f  line.c  memplt.c  memplt.f  perim.c  periml.c  periml.f  phdot.c  phline.c  plot_cox.c  plot_motif.c  plot_ps.c  plot_ps2.c  plot_strip.c  plot_ts.c  plot_x11.c  plotpak.inc  point.c  points.c  points.f  ppak_commons.c  ppak_perim.c  ppak_pwrit.c  ppak_pwritf.c  ppak_srface.c  pwrit.c  (+41 more)
src/crorden/: CMakeLists.txt  README.txt
src/dlcompat/: ChangeLog  Makefile  README  dlfcn.h  dlopen.c
src/edt_python/: edt_multiroi_v3.py
src/eispack/: CMakeLists.txt  Makefile  eis_bakvec.c  eis_balanc.c  eis_balbak.c  eis_bandr.c  eis_bandv.c  eis_bisect.c  eis_bqr.c  eis_cbabk2.c  eis_cbal.c  eis_cdiv.c  eis_cg.c  eis_ch.c  eis_cinvit.c  eis_combak.c  eis_comhes.c  eis_comlr.c  eis_comlr2.c  eis_comqr.c  eis_comqr2.c  eis_cortb.c  eis_corth.c  eis_csroot.c  eis_elmbak.c  eis_elmhes.c  eis_eltran.c  eis_epslon.c  eis_figi.c  eis_figi2.c  eis_hqr.c  eis_hqr2.c  eis_htrib3.c  eis_htribk.c  eis_htrid3.c  eis_htridi.c  eis_imtql1.c  eis_imtql2.c  eis_imtqlv.c  eis_invit.c  (+39 more)
src/f2c/: CMakeLists.txt  F77_aloc.c  Fmain.c  d_atn2.c  d_cos.c  d_exp.c  d_int.c  d_log.c  d_mod.c  d_nint.c  d_sinh.c  defs.h  dfe.c  due.c  err.c  exec.c  f2c.h  f2c.ps  fmt.c  format.c  gram.c  gram.ccc  h_dnnt.c  h_nint.c  i_dnnt.c  iio.c  io.c  lread.c  lwrite.c  machdefs.h  mathh.h  misc.c  names.c  open.c  output.c  output.h  p1defs.h  pow_zz.c  pread.c  putpcc.c  (+19 more)
src/f2cdir/: CMakeLists.txt  F77_aloc.c  Makefile  c_cos.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  cabs.c  close.c  d_acos.c  d_asin.c  d_atan.c  d_cosh.c  d_lg10.c  d_mod.c  d_sin.c  d_sqrt.c  d_tan.c  d_tanh.c  defs.h  endfile.c  err.c  exit.c  expr.c  f2c.h  f2c.ps  fio.h  formatdata.c  gram.c  gram.ccc  gram.head  i_nint.c  init.c  inquire.c  io.c  main.c  mathh.h  misc.c  open.c  (+30 more)
src/faces/: CMakeLists.txt  afnimusic.au  distface  face_title.pgm
src/gifsicledir/: Makefile  Makefile.in  clp.c  clp.h  config.cache  config.h  config.h.in  config.status  configure  fmalloc.c  gif.h  gifdiff.c  (+16 more)
tests/: .codecov.yml  .coveragerc  .pdbrc  .pdbrc.py  CMakeLists.txt  MANIFEST.in  README.md  README.rst  codecov.yml  conftest.py  environment.yml  pytest.ini  run_afni_tests.py  run_tests.sh  run_tests_cmake.sh  run_tests_cmake_build.sh  run_tests_make_build.sh  setup.py  test_invariant_count.c  tests_env.yml
(+3596 files in other folders)
